# realitydefender-sdk-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  sonar-project.properties
.github/workflows/: build-publish.yml  check-format-test.yml  on-merge-main.yml  on-pr.yml  on-tag.yml  publish-rust.yml  test-rust.yml
examples/: basic.rs  batch_processing.rs  get_results.rs  social_media.rs
src/: client.rs  config.rs  error.rs  file.rs  http.rs  lib.rs  models.rs  utils.rs
tests/: client_test.rs  config_test.rs  error_test.rs  http_test.rs  models_test.rs  utils_test.rs
