[package]
name = "realitydefender"
version = "0.1.1"
edition = "2021"
authors = ["Reality Defender <support@realitydefender.com>"]
description = "Reality Defender SDK for Rust - Tools for detecting deepfakes and manipulated media"
documentation = "https://github.com/Reality-Defender/realitydefender-sdk-rust"
homepage = "https://realitydefender.com"
repository = "https://github.com/Reality-Defender/realitydefender-sdk-rust"
license = "Apache-2.0"
keywords = ["ai", "deepfake", "detection", "media", "verification"]
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"
log = "0.4"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.3"
async-trait = "0.1"
rand = "0.8"

[features]
default = [] 
