[package]
name = "realitydefender"
version = "0.1.2"
edition = "2021"
authors = ["Reality Defender <support@realitydefender.com>"]
description = "Reality Defender SDK for Rust - Tools for detecting deepfakes and manipulated media"
documentation = "https://github.com/Reality-Defender/realitydefender-sdk-rust"
homepage = "https://realitydefender.com"
repository = "https://github.com/Reality-Defender/realitydefender-sdk-rust"
license = "Apache-2.0"
keywords = ["ai", "deepfake", "detection", "media", "verification"]
categories = ["api-bindings", "multimedia"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.3"